<resources>
    <string name="app_name">Yandex Services</string>
    <string name="searchSpecial">Войти и найти специалиста</string>
    <string name="who_you">Я исполнитель</string>
    <string name="todo">TODO</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="loginWithId">Войдите с Яндекс ID</string>
    <string name="mail">Почта</string>
    <string name="telephone">Телефон</string>
    <string name="no_know_password">Тестовый пароль</string>
    <string name="sozdate_id">Создать ID</string>
    <string name="error_psw">Неверный пароль</string>
    <string name="open_home">Войти</string>
    <string name="search_specialist">Найти специалиста</string>
    <string name="technick">Установка техники</string>
    <string name="electronika">Электронника</string>
    <string name="stirka_car">Стиральные машины</string>
    <string name="take_do">Поручите дела специалистам</string>
    <string name="elektronika">Электронника</string>
    <string name="santehnika">Сантехника</string>
    <string name="himchistka">Химчистка</string>
    <string name="dezinfekcia">Дезинфекция</string>
    <string name="repair">Ремонт</string>
    <string name="uborka">Уборка</string>
    <string name="stirka">Стирка</string>
    <string name="search_schetchik">Проверка счётчиков</string>
    <string name="catalog_in_nn">Каталог услуг в Нижнем Новгороде</string>
    <string name="describe_problem">Опишите задачу, а мастера сами предложат свои услуги. Выберите исполнителя по рейтингу и отзывами других клиентов. Договоритесь о цене самостоятельно</string>
    <string name="repair_and_сonstruction">Ремонт и строительство</string>
    <string name="lawyers">Юристы</string>
    <string name="courier">Перевозки и курьеры</string>
    <string name="computer_and_it">Компьютеры и IT</string>
    <string name="beauty">Красота</string>
    <string name="rent">Аренда</string>
    <string name="repair_auto">Ремонт авто</string>
    <string name="look_all_services">Посмотреть все услуги</string>
    <string name="search_d">Поиск</string>
    <string name="news">Новости</string>
    <string name="orders">Мои заказы</string>
    <string name="more">Ещё</string>
    <string name="email">Логин или email</string>
    <string name="passworsd">Пароль</string>
    <string name="publish">Опубликовать</string>
    <string name="ispolnitel">Исполнители не видят ваш номер телефона и не могут звонить вам сами</string>
    <string name="_7_940_820_35_75">+7 (940) 820 35 75</string>
    <string name="aboutall">Расскажите подробнее о задаче</string>
    <string name="short_name">Короткое название вашей задачи</string>
    <string name="that_need_do">Что нужно сделать?</string>
    <string name="back">Назад</string>
    <string name="need_time">Вы ещё не создавали заказы — время начать!</string>
    <string name="take_order">1. Разместите заказ</string>
    <string name="check_work">Опишите задачу. Если нужно, укажите сроки и бюджет</string>
    <string name="need_new_order">Испольнители сами откликаются на ваш заказ. Обсудите детали заказа в чате или по телефону</string>
    <string name="choose_executor">3. Выберите исполнителя</string>
    <string name="choose_rating_executor">Выберите подходящего вам исполнителя по рейтингу, отзывам и цене</string>
    <string name="create_order">Создать заказ</string>
    <string name="get_offer">2. Получите предложения</string>
    <string name="Cabinet">Кабинет исполнителя</string>
    <string name="Stay_Executor">Стать исполнителем</string>
    <string name="Support_and_Servies">Поддержка и сервис</string>
    <string name="Whrite_Support">Написать в поддержку</string>
    <string name="Blog">Блог</string>
    <string name="About_Services">О сервисе</string>
    <string name="FAQ">Вопросы и ответы</string>
    <string name="User_greement">Пользовательское соглашение</string>
    <string name="For_legal_issues">По юридическим вопросам</string>
    <string name="choose_executor_which">Предлагаем исполнителей, которые соответствуют вашему заказу. Вам больше не нужно изучать десятки профилей - выбирайте сразу из подходящих вариантов</string>
    <string name="hi_this_yandex">Привет, это Яндекс Услуги!</string>
    <string name="comegone_your_task">Предложите ваше задание</string>
    <string name="helper_with_executor">Поможем с подбором исполнителя</string>
</resources>